Fixed navbar dropdowns hiding behind slider and added a Home option.

--- a/static/style.css
+++ b/static/style.css
@@ -70,15 +70,23 @@ form { margin:auto; width:960px;}
   color:white !important; 
   padding:4px; 
   padding-left:20px; 
-  padding-right:20px;}
+  padding-right:20px;
+}
+
+li#donatebtn {
+  border-right: none !important;
+}
+
 #donatebtn:hover a { 
-  background-color:white !important; 
+  background-color:#d3d3d3 !important; 
   color:#0389d8 !important; 
 }
 
 nav {
   width:100%;
   margin:20px 0;
+  position:relative;
+  z-index:10;
 }
 
 #navbar {
@@ -88,6 +96,7 @@ nav {
   padding: 0;
   height: 1em; 
   overflow:hidden;
+  width:100%;
 }
 
 #navbar ul {
@@ -97,11 +106,13 @@ nav {
 #navbar li {
   list-style: none;
   float: left; 
+  border-right:1px white solid;
 }
 
 #navbar li a {
   display: block;
-  padding: 10px 64px;
+  /*font-weight: bold; pushes donate button down?*/
+  padding: 10px 50px;
   background-color: #440F7F;
   color: #fff;
   text-decoration: none; 
@@ -111,21 +122,37 @@ nav {
 #navbar li ul {
   display: none; 
   width: 10em; /* Width for Opera */
-  background-color: #69f;}
+  background-color:  #d3d3d3;
+}
+
+#navbar li li a {
+  padding: 10px 0 10px 20px;
+  background-color: #d3d3d3;
+  color:#0389d8 !important;
+}
 
 #navbar li:hover ul {
   display: block;
   position: absolute;
   margin: 0;
-  padding: 0; }
+  padding: 0; 
+}
+
 #navbar li:hover li {
-  float: none; }
+  float: none; 
+}
+
 #navbar li:hover li a {
-  background-color: #69f;
+  background-color: #d3d3d3;
+  border-right: none;
   border-bottom: 1px solid #fff;
-  color: #000; }
+  color: #000; 
+}
+
 #navbar li li a:hover {
-  background-color: #8db3ff; }
+  background-color: #8db3ff; 
+  padding: 10px 0 10px 20px;
+}
 
 
 /* IMAGE SLIDER */
